# librarianx

./: .gitignore  .golangci.yaml  README.md  all_test.go  convert-sidekick-toml  go.mod  go.sum  librarian-migrate  librarian.yaml
cmd/convert/: README.md  main.go
cmd/convert-sidekick-toml/: main.go
cmd/librarian/: main.go
cmd/librarian-migrate/: bazel.go  bazel_test.go  main.go  merger.go  reader.go  types.go
cmd/sideflip/: main.go
cmd/sidekick-migrate/: main.go
data/alternatives/: rust.yaml
data/dart/: librarian.yaml
data/go/: librarian.yaml
data/python/: librarian.yaml
data/rust/: CONVERSION_SUMMARY.md  UNSUPPORTED_FIELDS.md  librarian.yaml  librarian2.yaml
devtools/: convert_state.py
doc/: CONTRIBUTING.md  DESIGN_COMPREHENSIVE_SCHEMA.md  README.md  alternatives-considered.md  alternatives.md  config-commands.md  config.md  configure.md  container.md  design-editions.md  design-librarian-yaml-comprehensive.md  design-librarian-yaml-extended.md  design-libraries.md  design.md  generate.md  generatepython.md  go.md  howwewritego.md  librarian-yaml-example.yaml  librarian-yaml-spec.md  librarianops.md  library-settings-migration.md  library_settings.md  migrate-python.md  prd.md  prompt.md  publishing.md  python.md  release.md  rust.md  service-onboarding.md  sidekick-merge-strategy.md  todo.md  userguide.md
internal/bazel/: doc.go  example_test.go  generic.go  generic_test.go  parser.go
internal/config/: bazel.go  bazel_test.go  config.go  config_extended.go  config_test.go  data_test.go  discover.go  discovery.go  discovery_test.go  documentation_overrides.yaml  enrich.go  init.go  language.go  library.go  library_settings.go  library_settings_test.go  names.go  names_test.go  naming.go  overrides.go  overrides_test.go  repometadata.go  repometadata_test.go  service_config_extract.go  service_config_extract_integration_test.go  service_config_extract_test.go  service_config_overrides.yaml  util.go
internal/config/testdata/: go.yaml  python.yaml  release_only.yaml  rust.yaml
internal/convert/: DROPPED_DATA.md  convert.go  convert_test.go  sidekick.go  validate_test.go
internal/fetch/: fetch.go  fetch_test.go
internal/generate/: service_config_overrides.yaml
internal/generate/golang/: main.go  main_test.go
internal/generate/python/: generate.go  generate_test.go  postprocessor.go  postprocessor_test.go  protoc.go  protoc_test.go
internal/golang/: golang.go  golang_test.go
internal/golang/configure/: configure.go  configure_test.go  response.go
internal/golang/execv/: execv_test.go
internal/golang/generate/: generator.go  generator_test.go  manifest.go  manifest_test.go
internal/golang/postprocessor/: postprocessor.go  postprocessor_test.go
internal/golang/protoc/: protoc.go
internal/golang/release/: golang.go  golang_test.go  release.go
internal/golang/request/: request_test.go
internal/language/: generate.go  generate_test.go  init.go  names.go  names_test.go  release.go
internal/language/golang/: golang.go  golang_test.go
internal/language/python/: generate.go  generate_test.go  postprocessor_test.go  protoc.go  protoc_test.go  release.go  release_test.go
internal/language/rust/: init.go  init_test.go
internal/librarian/: add.go  add_cmd.go  add_test.go  create.go  format.go  generate.go  generate_test.go  generateall.go  init.go  librarian.go  librarian_test.go  publish.go  release.go  remove.go  remove_cmd.go  version.go
internal/librarian/testdata/: go.yaml  python.yaml  rust.yaml
internal/naming/: naming.go  util.go
internal/python/: generate.go  generate_test.go  postprocessor.go  postprocessor_test.go  protoc.go  python.go  release.go  release_test.go
internal/release/python/: release.go  release_test.go
internal/rust/: rust.go
internal/sidekick/api/: dependencies_test.go  documentation.go  documentation_test.go  model.go  model_test.go  test.go  well_known_types.go  xref.go  xref_test.go
internal/sidekick/codec_sample/: generate.go  generate_test.go
internal/sidekick/config/: config.go  config_test.go  discovery.go  discovery_test.go  source_roots_test.go  update_root_config.go  update_root_config_test.go
internal/sidekick/dart/: annotate.go  annotate_test.go  dart.go  dart_test.go  generate.go  generate_test.go
internal/sidekick/language/: codec.go  codec_test.go  generate.go  generate_test.go
internal/sidekick/license/: license.go
internal/sidekick/parser/: auto_populated.go  disco.go  disco_test.go  mixin.go  mixin_test.go  openapi.go  openapi_behavior.go  openapi_test.go  package_name.go  pagination.go  pagination_test.go  parser.go  parser_test.go  protobuf.go  protobuf_annotations.go  protobuf_behavior.go  protobuf_mixin_test.go  protobuf_test.go  routing_info.go  routing_info_test.go  service_config.go  service_config_test.go
internal/sidekick/protobuf/: input_files.go  input_files_test.go
internal/sidekick/rust/: annotate.go  annotate_field_test.go  annotate_map_test.go  annotate_method_test.go  annotate_model_test.go  annotate_test.go  codec.go  codec_test.go  generate.go  generate_test.go  used_by_test.go
internal/sidekick/rust_prost/: annotate.go  annotate_test.go  codec.go  codec_test.go  generate.go
internal/sidekick/rust_release/: bump_versions.go  bump_versions_test.go  changes.go  changes_test.go  last_tag.go  last_tag_test.go  preflight.go  preflight_test.go  publish.go  publish_test.go  update_manifest.go  update_manifest_test.go  update_sidekick_config.go  update_sidekick_config_test.go
internal/sidekick/sample/: api.go
internal/sidekick/sidekick/: cmdline.go  command.go  command_test.go  downloads_cache.go  downloads_cache_test.go  generate.go  refresh.go  refreshall.go  rust_bump_versions.go  rust_bump_versions_test.go  rust_generate.go  rust_publish.go  rust_publish_test.go  sidekick.go  sidekick_rust_prost_convert_test.go  sidekick_sample_test.go  (+3 more)
repos/: go.yaml  python.yaml
testdata/dart/: librarian.yaml
testdata/go/: librarian.yaml
testdata/python/: librarian.yaml
testdata/rust/: librarian.yaml
testrepo/rust/: Cargo.toml  librarian.yaml
(+118 files in other folders)
