[workspace]
resolver = "2"

[workspace.package]
edition      = "2024"
authors      = ["Google LLC"]
description  = "Google Cloud Client Libraries for Rust"
license      = "Apache-2.0"
repository   = "https://github.com/googleapis/google-cloud-rust/tree/main"
keywords     = ["gcp", "google-cloud", "google-cloud-rust", "sdk"]
categories   = ["network-programming"]
rust-version = "1.85.0"

[workspace.dependencies]
async-trait           = { default-features = false, version = "0.1.85" }
base64                = { default-features = false, version = "0.22", features = ["std"] }
bon                   = { default-features = false, version = "3.8" }
bytes                 = { default-features = false, version = "1.10", features = ["serde"] }
chrono                = { default-features = false, version = "0.4.42" }
clap                  = { default-features = false, version = "4" }
crc32c                = { default-features = false, version = "0.6.8" }
futures               = { default-features = false, version = "0.3" }
futures-util          = { default-features = false, version = "0.3" }
http                  = { default-features = false, version = "1", features = ["std"] }
http-body             = { default-features = false, version = "1" }
http-body-util        = { default-features = false, version = "0.1.3" }
humantime             = { default-features = false, version = "2" }
hyper                 = { default-features = false, version = "1" }
jsonwebtoken          = { default-features = false, version = "10" }
lazy_static           = { default-features = false, version = "1.2" }
opentelemetry         = { default-features = false, version = "0.31", features = ["trace"] }
opentelemetry-proto   = { default-features = false, version = "0.31", features = ["gen-tonic", "trace"] }
opentelemetry_sdk     = { default-features = false, version = "0.31", features = ["rt-tokio", "trace"] }
parse-size            = { default-features = false, version = "1.1" }
percent-encoding      = { default-features = false, version = "2" }
pin-project           = { default-features = false, version = "1" }
prost                 = { default-features = false, version = "0.14", features = ["std"] }
prost-build           = { default-features = false, version = "0.14" }
prost-types           = { default-features = false, version = "0.14" }
rand                  = { default-features = false, version = "0.9.2" }
reqwest               = { default-features = false, version = "0.12.24", features = ["json"] }
rustls                = { default-features = false, version = "0.23" }
rustls-pemfile        = { default-features = false, version = "2" }
serde                 = { default-features = false, version = "1.0.228", features = ["serde_derive"] }
serde_json            = { default-features = false, version = "1.0.132", features = ["std"] }
serde_with            = { default-features = false, version = "3", features = ["base64", "macros", "std"] }
sha2                  = { default-features = false, version = "0.10" }
thiserror             = { default-features = false, version = "2" }
time                  = { default-features = false, version = "0.3.44" }
tokio                 = { default-features = false, version = "1" }
tokio-metrics         = { default-features = false, version = "0.4.5" }
tonic                 = { default-features = false, version = "0.14.1", features = ["tls-native-roots", "tls-ring"] }
tonic-prost           = { default-features = false, version = "0.14.2" }
tonic-prost-build     = { default-features = false, version = "0.14.1" }
tower                 = { default-features = false, version = "0.5", features = ["util"] }
tracing               = { default-features = false, version = "0.1.41", features = ["attributes"] }
tracing-log           = { default-features = false, version = "0.2" }
tracing-opentelemetry = { default-features = false, version = "0.32" }
tracing-subscriber    = { default-features = false, version = "0.3.18" }
url                   = { default-features = false, version = "2" }
uuid                  = { default-features = false, version = "1", features = ["v4"] }

opentelemetry-otlp = { default-features = false, version = "0.31", features = [
  "grpc-tonic",
  "tls",
  "tls-roots",
  "trace",
] }
opentelemetry-semantic-conventions = { default-features = false, version = "0.31.0", features = [
  "semconv_experimental",
] }


# Transitive dependencies. Used for minimal version selection.
mime = { default-features = false, version = "0.3.17" }

# Test packages
anyhow            = { default-features = false, version = "1.0.100", features = ["std"] }
axum              = { default-features = false, version = "0.8" }
flate2            = { default-features = false, version = "1" }
httptest          = { default-features = false, version = "0.16.3" }
md5               = { default-features = false, version = "0.8" }
mockall           = { default-features = false, version = "0.13" }
multer            = { default-features = false, version = "3" }
mutants           = { default-features = false, version = "0.0.3" }
once_cell         = { default-features = false, version = "1.19.0" }
paste             = { default-features = false, version = "1" }
regex             = { default-features = false, version = "1" }
rsa               = { default-features = false, version = "0.9.8" }
rustc_version     = { default-features = false, version = "0.4" }
scoped-env        = { default-features = false, version = "2.1" }
serial_test       = { default-features = false, version = "3" }
static_assertions = { default-features = false, version = "1.1" }
tempfile          = { default-features = false, version = "3.23" }
test-case         = { default-features = false, version = "3.3" }
tokio-stream      = { default-features = false, version = "0.1" }
tokio-test        = { default-features = false, version = "0.4" }

rpc               = { version = "1", path = "src/generated/rpc/types", package = "google-cloud-rpc" }

[workspace.members]
members = [
  "src/auth",
  "src/gax",
  "src/gax-internal",
  "src/wkt",
  "src/generated/rpc/types",
]
